# unified_data_dictionary

./: CHANGELOG.md  LICENSE  Makefile  README.md  SUMMARY.md  VERIFICATION_SUMMARY.txt  config.yaml  pyproject.toml  release_notes.md  requirements.txt
data/: README.md
docs/: DIRECTORY_CLEANUP.md  FILE_PLACEMENT_GUIDE.md  PROJECT_SETUP_SUMMARY.md  README.md  SETUP_COMPLETE.md  TEXTEXPANDER_WORKFLOWS.md
docs/chatlogs/: README.md
docs/chatlogs/chunked/: 2025_12_17_22_24_14_updated_chunk_cursor_unified_data_dictionary_setup.origin.json  2025_12_17_22_24_14_updated_chunk_cursor_unified_data_dictionary_setup_sidecar.json  2025_12_17_22_24_14_updated_chunk_cursor_unified_data_dictionary_setup_transcript.json  2025_12_17_22_24_14_updated_chunk_cursor_unified_data_dictionary_setup_transcript.md  chunk_00000.txt  chunk_00001.txt  chunk_00002.txt  chunk_00003.txt  chunk_00004.txt  chunk_00005.txt  chunk_00006.txt  chunk_00007.txt  chunk_00008.txt  chunk_00009.txt  chunk_00010.txt  chunk_00011.txt  chunk_00012.txt  chunk_00013.txt  chunk_00014.txt  chunk_00015.txt  chunk_00016.txt  chunk_00017.txt  chunk_00018.txt  chunk_00019.txt
docs/chatlogs/raw/: updated_chunk_cursor_unified_data_dictionary_setup.md
docs/maintenance/: ORGANIZATION_COMPLETE_v0.2.0.md
docs/planning/: DELIVERABLES_SUMMARY.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_STRATEGY.md  decision_log.md
docs/setup/: VERIFICATION_REPORT.md
docs/workflows/: Chatlog_Processing_Workflow.md
examples/: README.md
mappings/: cad_field_map_latest.json  cad_field_map_v2.json  cad_rms_merge_policy_latest.json  cad_to_rms_field_map_latest.json  cad_to_rms_mapping.csv  mapping_rules.md  rms_field_map_latest.json  rms_to_cad_field_map_latest.json  rms_to_cad_mapping.csv
schemas/: cad_fields_schema.json  cad_fields_schema_latest.json  cad_fields_schema_v2.json  cad_rms_schema_registry.yaml  canonical_schema.json  rms_fields_schema_latest.json  transformation_spec.json
scripts/: CREATE_STRUCTURE.bat  DOpus_Process_UDD_Chatlog_Button.dcf  Process_UDD_Chatlog.bat  Sync_UDD_Processors_local_run.ps1  cleanup_duplicate_outputs.ps1  cleanup_duplicates.ps1  cli.py  extract_rules_from_repo.py  generate_excel_output.py  list_duplicate_outputs.ps1  process_chatlog.bat  quick_process_chatlog.bat
src/: build_dictionary.py  cli.py  extract_from_repos.py  standardize_cads.py
templates/: README.md
tests/: test_allowed_values.py  test_coordinate_validation.py  test_datetime_parsing.py  test_join_keys.py
validators/: run_validation_benchmarks.py
